# NeoShinri-Engine

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENCE  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt
docs/MVP/: ROADMAP.md
docs/Protocols/: acp_schema.md
neoshinri/controller/: main.py
neoshinri/shared/protocols/: acp.py  constants.py  enums.py
neoshinri/transport/: main.py
tests/shared/protocols/: test_acp.py
